[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Universe/Universe.gd" type="Script" id=1]
[ext_resource path="res://scenes/Universe/Station/Station.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Universe/Station/StationBuilding.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Universe/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Universe/AsteroidField.tscn" type="PackedScene" id=5]

[node name="Universe" type="Spatial" groups=[
"Persist",
]]
script = ExtResource( 1 )
universe_scale = 100000.0

[node name="Stations" type="Spatial" parent="."]

[node name="Dirac" parent="Stations" instance=ExtResource( 2 )]
transform = Transform( 0.610173, -0.787074, 0.0905718, -0.132908, -0.214389, -0.967664, 0.781041, 0.578404, -0.235422, 0, 0, 0 )

[node name="Vacant0" parent="Stations/Dirac" instance=ExtResource( 3 )]

[node name="Vacant1" parent="Stations/Dirac" instance=ExtResource( 3 )]

[node name="Vacant2" parent="Stations/Dirac" instance=ExtResource( 3 )]

[node name="AsteroidFeilds" type="Spatial" parent="."]

[node name="LZZ-93-S" parent="AsteroidFeilds" instance=ExtResource( 5 )]
transform = Transform( -0.960632, -0.258242, -0.102454, 0.277331, -0.869389, -0.408962, 0.0165387, -0.421276, 0.906782, 0, 0, 0.5 )
resource_type = 0

[node name="Player" parent="." instance=ExtResource( 4 )]
[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="area_exited" from="Player" to="." method="_on_Player_area_exited"]
[connection signal="cargo_updated" from="Player" to="." method="_on_Player_cargo_updated"]
[connection signal="credits_updated" from="Player" to="." method="_on_Player_credits_updated"]
[connection signal="map_updated" from="Player" to="." method="_on_Player_map_updated"]
